--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,638 @@
-.navigation-container {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 32px;
-    padding-right: 32px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+body {
+    margin: 0;
+    padding: 0;
 }
 
-.navigation-icon{
-    background-image: url();
-    border: 1px black;
-    height: 32px;
-    width: 32px;
+/* Global styles */
+.navigation-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 32px 0px 0px;
+    background-color: white;
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.navigation-icon {
+    margin: 0px 50px    ;
+    background-image: url("assets/travel.jpg");
+    background-color: #cccccc;
+    height: 90px;
+    width: 90px;
     background-size: cover;
     border-radius: 50%;
 }
 
-.navigation-container>nav>button {
-    height: 32px;
+.navigation-container > nav > button {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 19.6px;
+    text-align: center;
+    height: 40px;
+    background-color: transparent;
     border: 1px solid black;
-    background-color: white;
-    border-radius: 8px;
+    border-radius: 4px;
+    padding: 0 20px;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: background-color 0.3s, color 0.3s;
+    border-width: 2px;
+    /* margin-left: 10px; */
 }
 
-.content-container>header {
+.navigation-container > nav > button:hover {
+    background-color: chocolate;
+    color: white;
+}
+
+.content-container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+.content-container > header {
+    padding: 90px 0px 100px 0px;
+    text-align: center;
+    color: black;
+    font-size: 30px;
+    width: max-content;
+    box-sizing: border-box;
+    
+}
+
+
+.content-container header h1{
+    font-family: "Open Sans", serif;
+    position: relative;
+    font-size: 28px;
+    font-variant: none;
+    font-weight: 700;
+    line-height: 33.6px;
+    text-decoration: none solid rgb(59, 71, 84);
+    text-align: center;
+    white-space: pre-wrap;
+    background: 0% 0%;
+    height: 33.6px;
+    display: block;
+    cursor: default;    
+}
+
+.content-container header p{
+    font-family: "Open Sans", serif;
+    font-size: 16px;
+    font-variant: none;
+    line-height: 17.6px;
+    text-decoration: none solid rgb(121, 141, 163);
+    text-align: center;
+    white-space: pre-wrap;
+    word-spacing: 0px;
+    background: 0% 0%;
+    cursor: default;
+    padding: 10px;
+}
+
+.header-columns {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.header-column {
     text-align: center;
 }
 
-.core-content{
+.header-column h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.header-column p {
+    font-size: 1em;
+}
+
+
+.header-with-image {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: auto;
+
+}
+
+.image-container {
+    position: relative;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.image-container img {
+    display: inline;
+    max-width: 100%;
+    height: 600px;
+    width: 1519.2px;
+    box-sizing: border-box;
+    
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: whitesmoke;
+    font-size: 24px;
+    padding: 20px;
+    /* background-color: rgba(214, 208, 199, 0.5);  */
+}
+
+.centered p {
+    margin: 0;
+    font-size: 16px; /* Adjust the font size as needed */
+    line-height: 1.5; /* Adjust the line height as needed */
+}
+
+
+/* Core content styles */
+.core-content {
+    
     display: flex;
+    flex-direction:row; 
+    justify-content: center; 
+    align-items: center; 
+    width: 100%;
+    height: auto; 
+    /* margin-top: 0px;  */
+    margin-right: auto; 
+    margin-left: auto; 
 }
 
 .core-item {
+    /* 
     height: 200px;
     width: 100%;
-    border: 1px solid;
-    margin: 18px;
-}
-
-.core-item>header>h2 {
-    text-align: center;
-}
-
-.core-item{
-    background-color: aliceblue;
-    border: 0;
+    */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    margin: 20px;
     border-radius: 8px;
 }
 
-.item-form {
+.core-item.item-right {
+    background-color: rgb(161, 121, 11);
+    max-width: 400px; 
+    margin: 100px 5% 20px calc(5% + 40px);
+    display: inline;
     text-align: center;
+    line-height: 22.4px;
+    height: auto;
+    width: auto;
+    cursor: default;
+    padding: 10px 10px 10px 10;
 }
 
-.item-form>input {
-    height: 32px;
-    width: 50%;
-    margin-left: 8px;
-    border: 1px solid darkgrey;
-    border-radius: 4px
+.core-item.item-right h2 {
+    font-family: "Open Sans", serif;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 17.6px;
+    text-align: left;
+    color: black;
+    height: 17.6px;
+    width: 225px;
+    display: block;
+    cursor: default;
+}
+
+.core-item.item-right p {
+    font-family: "Open Sans", serif;
+    font-size: 11px;
+    font-weight: 700;
+    padding: 0px;
+    line-height: 15.4px;
+    text-align: left;
+    color: white;
+    height: 30.8px;
+    width: 206px;
+    display: block;
+    cursor: default;
 
 }
 
-.our-package-content {
-    align-content: center;
+.core-item > header, .item-form {
+    text-align: left;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 20px; 
+    flex: 1;
+}
+
+.item-form {
+    margin: 20px 20px 20px 20px;
+    width: 100%; 
+    max-width: 400px;
+    text-align: left;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 3px; 
+}
+
+.item-form > header {
+    text-align: left;
+}
+
+.item-form label {
+    display: block;
+    font-weight: bold;
+    font-size: 12px;
+    margin-bottom: 5px; 
+    width: 100%; 
+    box-sizing: border-box;
+    
+}
+
+.item-form input[type="text"],
+.item-form select {
+    width: calc(100% - 22px);
+    padding: 12px 10px; 
+    margin-bottom: 10px; 
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+input[type="email"] {
+    width: calc(100% - 22px);
+    padding: 12px 10px; 
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button[type="submit"] {
+    display: block;
+    justify-content: center;
+    padding: 15px 123px;
+    margin: 70px 10px 10px 30px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: "Open Sans", serif;
+    font-size: 12px;
+    font-weight: bold;
+    font-variant: none;
+    line-height: 17px;
+    text-align: center;
+    text-transform: uppercase;
+    word-spacing: 0px;
+}
+
+button:hover {
     background-color: antiquewhite;
+    color: black; 
 }
 
-.our-package-content>h1 {
-    font-size: 24px;
+
+.core-item.item-left {
+    background-color: antiquewhite;
+    display: inline;
+    grid-template-columns: 1fr 1fr; 
+    grid-column-gap: 20px; 
+    align-items: center; 
+}
+
+.core-item.item-left img {
+    margin-right: 10px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.core-item.item-left img:last-child {
+    display: block;
+    max-width: 40px; 
+    height: px;
+    width: 36px;
+    margin-top: 10px; 
+}
+
+.core-item.item-left p {
+    margin-top: 10px;
+    font-style: italic;
+}
+
+.user-review {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column; 
+    padding-top: 20px;
+}
+
+.user-review p {
+
+    padding-top: 20px;
+
+}
+
+.user-review img {
+    max-width: 100%; 
+}
+
+.user-info {
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    font-family: Arial, sans-serif;
+    margin-bottom: 10px;
+    padding: 10px 10px 10px 10px ; 
+}
+
+.user-info img {
+    width: 30px;
+    height: auto; 
+    margin-right: 10px; 
+    border-radius: 50%;
+}
+
+.user-info div {
+    margin-left: 10px;
+}
+
+.user-info p {
+    margin: 0px 0px 10px; 
+    font-size: smaller;
+    text-align: left; 
+}
+
+.user-info span {
+    font-weight: bold;
+}
+
+.user-info p:last-child {
+    font-size: 12px; 
+    margin-top: 10px; 
+    text-align: left; 
+}
+
+.offer-info {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.no-numbers {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.no-numbers li {
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.no-numbers li img {
+    vertical-align: middle;
+    margin-right: 10px;
+    float: left;
+    clear: both;
+}
+
+.no-numbers li p {
+    margin-left: 60px; /* Adjust this value to control the space between the image and the text */
+    line-height: 1.5;
+}
+
+
+/* Our package content styles */
+.our-package-content {
+    background-color: antiquewhite;
+    padding: 60px;
+    text-align: center;
+    margin-top: 50px; 
+    border-radius: 60px; /* Add rounded corners */
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+
+.our-package-content img {
+    width: 450px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    display: block;
+}
+
+.our-package-content > h1 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 80px;
+    font-variant: none;
+    /* line-height: 100px; */
+    text-decoration: none solid rgb(0, 0, 0);
+    color: #000000;
+    display: inline;
     font-weight: bold;
     text-align: center;
+    transform: none;
+    transition: all 0s ease 0s;
+    margin-bottom: 20px;
+    cursor: default;
+}
+
+.our-package-content ul {
+    list-style-type: none;
+    padding: 50px 50px 40px 40px;
+    display: flex;
+    justify-content: space-around;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto); 
+    gap: 10px; 
+}
+
+.our-package-content ul li {
+    width: 30%;
+    position: relative;
+    border-radius: 10px;
+    padding: 20px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.our-package-content ul li a {
+    text-decoration: none;
+    font-weight: bold; 
+    display: block;
+    position: relative; 
+    overflow: hidden;
+    padding: 10px;
+    text-align: left;
+    color: inherit;
+}
+
+.our-package-content ul li a p {
+    font-weight: normal;
+    font-size: small;
+    margin: 10px 0;
+}
+
+.our-package-content ul li a div p:first-child {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.our-package-content ul li img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+
+.our-package-content ul li img:hover {
+    opacity: 0.5;
+    transform: scale(1.1);
+}
+
+
+
+/* Call Us content styles */
+.call-us-content {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.call-us-content > h1 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    font-variant: none;
+    /* line-height: 100px; */
+    text-decoration: none solid rgb(0, 0, 0);
+    color: #000000;
+    display: inline;
+    font-weight: bold;
+    text-align: center;
+    transform: none;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    cursor: default;
+}
+
+.call-us-content > p {
+    font-size: small;
+    text-align: center;
+    margin-top: auto;
+}
+
+.call-us-content button {
+    padding: 15px 100px; 
+    background-color: white;
+    color: black;
+    border: 2px solid;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.call-us-content button:hover {
+    background-color: antiquewhite;
+    color: black; 
+}
+
+.call-us-content::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.call-us-columns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+    background-color: antiquewhite; /* Adjust the alpha value (last parameter) for the desired transparency */
+    margin-bottom: 20px; /* Add some space between the columns */
+    border-radius: 10px; 
+}
+
+.call-us-column {
+    width: 25%; 
+    float: left; 
+    padding: 20px; 
+    box-sizing: border-box; 
+    background-color: rgb(177, 134, 17);
+    padding: 20px;
+    margin: 20px 20px 20px 20px;
+    border-radius: 20px;
+}
+/* Footer */
+footer {
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+footer img {
+    width: 80px; 
+    height: auto;
+    margin-bottom: 1px;
+}
+
+footer p {
+    margin-bottom: 10px;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 1px;
+}
+
+footer ul li {
+    display: inline;
+    margin-right: 10px;
+}
+
+footer ul li a { 
+    color: #007bff;
+    text-decoration: none;
+}
+
+footer ul li a:hover {
+    text-decoration: underline;
 }
